--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "leaflet": "^1.9.4",
