--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@supabase/supabase-js": "^2.87.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
